objects/TermsConditionsHistory__c.object
<CustomObject>
    <fields>
        <fullName>ContentVersionId__c</fullName>
        <description>Content Version ID for Terms and Conditions at the time of row creation</description>
        <inlineHelpText>Content Version ID for Terms and Conditions at the time of row creation</inlineHelpText>
        <label>Content Version ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCFileDownLoadUrl__c</fullName>
        <description>URL to download the Terms and Conditions that were accepted</description>
        <formula>'/sfc/servlet.shepherd/version/download/' &amp; ContentVersionId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TC File Down Load URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TermsConditionsAccepted__c</fullName>
        <description>Date/time that the T&amp;Cs were accepted</description>
        <inlineHelpText>Date/time that the T&amp;Cs were accepted</inlineHelpText>
        <label>Terms Conditions Accepted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TermsConditionsDeclined__c</fullName>
        <description>Datetime that the Terms and Conditions were declined.</description>
        <label>Terms Conditions Declined</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TermsConditionsEffective__c</fullName>
        <description>The Effective Date of the Terms and Conditions at the time the history row was created.</description>
        <label>Terms and Conditions Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that accepted the T&amp;Cs</description>
        <inlineHelpText>User that accepted the T&amp;Cs</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Terms_Conditions_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <description>Tracks each time a user accepts Terms &amp; Conditions.</description>
    <label>Terms Conditions History</label>
    <nameField>
        <displayFormat>TCA-{0000000}</displayFormat>
        <label>Reference #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Terms Conditions History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>